--- a/course_book.html
+++ b/course_book.html
@@ -241,8 +241,8 @@ Structure</a>
 1: Introduction to Programming Language Design</a></li>
 <li><a href="#lecture-2-types-and-structural-pattern-matching-in-python" id="toc-lecture-2-types-and-structural-pattern-matching-in-python">Lecture
 2: Types and Structural Pattern Matching in Python</a></li>
-<li><a href="#lecture-3-programming-language-fundamentals" id="toc-lecture-3-programming-language-fundamentals">Lecture 3:
-Programming Language Fundamentals</a></li>
+<li><a href="#lecture-3-programming-language-implementation-a-mini-interpreter" id="toc-lecture-3-programming-language-implementation-a-mini-interpreter">Lecture
+3: Programming Language Implementation: A mini interpreter</a></li>
 <li><a href="#lecture-3-tba" id="toc-lecture-3-tba">Lecture 3:
 TBA</a></li>
 <li><a href="#lecture-4-tba" id="toc-lecture-4-tba">Lecture 4:
@@ -418,15 +418,12 @@ hands-on experience with Python’s advanced features.</p>
 <li>Structural pattern matching (match/case statements)</li>
 <li>Practical applications and examples</li>
 </ul>
-<h3 id="lecture-3-programming-language-fundamentals">Lecture 3:
-Programming Language Fundamentals</h3>
+<h3 id="lecture-3-programming-language-implementation-a-mini-interpreter">Lecture
+3: Programming Language Implementation: A mini interpreter</h3>
 <ul>
-<li>What is a programming language?</li>
 <li>Parsing and lexical analysis</li>
 <li>Abstract Syntax Trees (AST)</li>
 <li>Program semantics</li>
-<li>Core language features</li>
-<li>Theoretical foundations</li>
 </ul>
 <h3 id="lecture-3-tba">Lecture 3: TBA</h3>
 <h3 id="lecture-4-tba">Lecture 4: TBA</h3>
@@ -461,7 +458,7 @@ Programming Language Design and Implementation</h1>
 <h2 id="section-1-what-is-a-programming-language">Section 1: What is a
 Programming Language?</h2>
 <ul>
-<li>Formal system for instructing computers</li>
+<li>A formal system for instructing computers</li>
 <li>Consists of syntax and semantics</li>
 <li>Bridge between human thought and machine execution</li>
 <li>Examples: Python, Java, C++, JavaScript, FSharp, Haskell, Microsoft
